--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,10 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = https://github.com/MartinRusk/XPLDevices
-
+lib_deps = 
+    https://github.com/MartinRusk/XPLDevices
+build_flags = 
+    -D XPLDIRECT_MAXDATAREFS_ARDUINO=10
+    -D XPLDIRECT_MAXCOMMANDS_ARDUINO=100
+    -D USE_PROGMEM=1
+    -D DEBOUNCE_DELAY=40
